force-app/main/default/objects/Job_Opening__c/Job_Opening__c.object-meta.xml
<CustomObject>
    <label>Job Opening</label>
    <nameField>
        <label>Job Opening</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>