force-app/main/default/objects/Job_Opening__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Openings</relationshipLabel>
    <relationshipName>Job_Openings</relationshipName>
    <type>Lookup</type>
</CustomField>