force-app/main/default/objects/Job_Opening__c/fields/Company_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Company_Revenue__c</fullName>
    <label>Company Revenue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>