force-app/main/default/objects/Job_Opening__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
                <default>true</default>
                <label>Full time</label>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>