force-app/main/default/objects/Job_Opening__c/fields/ESC_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>ESC_Website_Link__c</fullName>
    <label>ESC Website Link</label>
    <type>Url</type>
</CustomField>