force-app/main/default/objects/Job_Opening__c/fields/Job_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>