force-app/main/default/objects/Job_Opening__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>