force-app/main/default/objects/Job_Opening__c/fields/Job_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Expiry_Date__c</fullName>
    <inlineHelpText>Job Expiry date</inlineHelpText>
    <label>Job Expiry Date</label>
    <type>Date</type>
</CustomField>