force-app/main/default/objects/Job_Opening__c/fields/Job_Source__c.field-meta.xml
<CustomField>
    <fullName>Job_Source__c</fullName>
    <label>Job Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>EdJoin</fullName>
            </value>
            <value>
                <fullName>CareerBuilder</fullName>
            </value>
            <value>
                <fullName>School Spring</fullName>
            </value>
            <value>
                <fullName>Simply Hired</fullName>
            </value>
            <value>
                <fullName>GLASSDOOR</fullName>
            </value>
            <value>
                <fullName>Usreap</fullName>
            </value>
            <value>
                <fullName>IASA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>