force-app/main/default/objects/Job_Opening__c/fields/Max_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Rate__c</fullName>
    <label>Max Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>