force-app/main/default/objects/Job_Opening__c/fields/Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours__c</fullName>
    <description>Number of Hours per week</description>
    <label>Number of Hours per week</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>