force-app/main/default/objects/Job_Opening__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SLP</fullName>
            </value>
            <value>
                <fullName>ABA</fullName>
            </value>
            <value>
                <fullName>BCBA</fullName>
            </value>
            <value>
                <fullName>CF-SLP</fullName>
            </value>
            <value>
                <fullName>CNA</fullName>
            </value>
            <value>
                <fullName>COTA</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Diagnostician</fullName>
            </value>
            <value>
                <fullName>ERMHS Therapist</fullName>
            </value>
            <value>
                <fullName>GN-EDU</fullName>
            </value>
            <value>
                <fullName>LMFT</fullName>
            </value>
            <value>
                <fullName>LMSW</fullName>
            </value>
            <value>
                <fullName>LPC</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>LSW</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
            <value>
                <fullName>MFT</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>OT-A</fullName>
            </value>
            <value>
                <fullName>Para</fullName>
            </value>
            <value>
                <fullName>PSY</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>PT-A</fullName>
            </value>
            <value>
                <fullName>RBT</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>SET</fullName>
            </value>
            <value>
                <fullName>SKO</fullName>
            </value>
            <value>
                <fullName>SLI</fullName>
            </value>
            <value>
                <fullName>SLP-A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>