force-app/main/default/objects/Job_Opening__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <label>Skills Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>