force-app/main/default/objects/Job_Opening__c/validationRules/MIn_Rate_and_Max_Rate_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>MIn_Rate_and_Max_Rate_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &apos;Active&apos;) &amp;&amp; 
( 
ISBLANK( Min_Rate__c ) ||
ISBLANK( Max_Rate__c ) ||
ISBLANK( Job_Title__c ) ||
ISBLANK(  Number_of_Hours__c  ) 
)</errorConditionFormula>
    <errorMessage>Please fill up required fields before activating record: &quot;Rate, Job Title and number of Hours&quot;</errorMessage>
</ValidationRule>