force-app/main/default/objects/Job_Opening__c/listViews/Active_Job_Openings.listView-meta.xml
<ListView>
    <fullName>Active_Job_Openings</fullName>
    <columns>Job_Created_Date__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Address__City__s</columns>
    <columns>Address__StateCode__s</columns>
    <columns>Address__PostalCode__s</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Job Openings</label>
</ListView>